Fixes left gap

--- a/css_advanced/style/style.css
+++ b/css_advanced/style/style.css
@@ -41,6 +41,7 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     flex: 0;
+    margin: 0px;
     width: 100%;
 }
 
